--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,9 +1,9 @@
 
-# About the project
+## **Roope's Project**
 
-*Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the 'Useful links' page in the mooc area (chapter 1) for instructions.*
 
-**Hello!**
-My repository link: 
+**Hello world!** Welcome to my Open Data course page.
 
-https://github.com/roopekaaronen/IODS-project
+*My repository link:* 
+
+<https://github.com/roopekaaronen/IODS-project>
