--- a/chapter2.Rmd
+++ b/chapter2.Rmd
@@ -31,7 +31,7 @@ p <- ggpairs(learning2014, mapping = aes(col = gender), lower = list(combo = wra
 
 p
 
-![Scatterplot matrix](C:\Users\RoopeOK\Documents\GitHub\IODS-project\Exercise2Matrix.png)
+![**Scatterplot matrix**](C:\Users\RoopeOK\Documents\GitHub\IODS-project\Exercise2Matrix.png)
 
 
 
@@ -61,7 +61,7 @@ Multiple R-squared is 0.21. This implies that our model explains 21 % of the var
 
 Since stra and surf were not significant, I chose to delete them form my model. This left me with a (nice) simple regression model with points as the dependent variable and attitude as the independent/explanatory variable:
 
-![Simple Regression (Note: Scale of attitude here is 0-50, I was too lasy to fix it :)](C:\Users\RoopeOK\Documents\GitHub\IODS-project\Exercise2Regression.png)
+![**Simple Regression (Note: Scale of attitude here is 0-50, I was too lasy to fix it :)**](C:\Users\RoopeOK\Documents\GitHub\IODS-project\Exercise2Regression.png)
 
 The code for this was:
 
@@ -80,13 +80,17 @@ This is the coolest thing I've done with R so far, so I'm quite happy. Yay!
 
 *Step 5:*
 
-Moving towards diagnostics (shouldn't these be done *before* the regression analysis? Anyways...):
+Moving towards diagnostics (shouldn't these be done *before* the regression analysis? Anyways...), I drew three plots:
+
+par(mfrow = c(2,2))
+
+plot(my_model, which = c(1, 2, 5))
+
+Resulting in the following diagnostics:
+
+![**Diagnostics of Simple Linear Model**](C:\Users\RoopeOK\Documents\GitHub\IODS-project\Assumptions.png)
+
+We use the QQ plot here to evaluate how well the distribution of errors in our dataset matches a standard normal distribution. The Q-Q plot above suggests that our dataset indeed is normally distributed. Only very slight symptoms of kurtosis and skew are shown. The Residuals vs Fitted plot is nicely evenly distributed with no significant patterns standing out, suggesting that the assumption of constant variance of errors is reasonable. Although we have some outlier cases (data points 145, 56 and 35), according to our Residuals vs Leverage plot these don't have high leverage on our dataset, since the leverage values are relatively low. Conclusively, it's safe to say that our model fulfils the assumptions required for a linear regression analysis (i.e. our findings are reliable).
 
 
 
-
-- Describe your work and results clearly. 
-- Assume the reader has an introductory course level understanding of writing and reading R code as well as statistical methods
-- Assume the reader has no previous knowledge of your data or the more advanced methods you are using  
-
-learning2014
