--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,7 @@ title: "IODS course project"
 author: "Roope O. Kaaronen"
 output:
   html_document:
-    theme: cosmo
+    theme: cerulean
     toc: true
     toc_depth: 2
     fig_caption: true
